Saved results for LGBM with ROC on ACS PubCov

--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy4.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "df469b69",
+   "id": "9e28b94d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "42710975",
+   "id": "77f979e4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ad30c64",
+   "id": "fba527f9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "34934204",
+   "id": "de9de03f",
    "metadata": {
     "is_executing": true
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9fcdd286",
+   "id": "66c0a4c1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.593291Z",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a0dc0917",
+   "id": "92941a3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.860770Z",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a526d685",
+   "id": "d2d0d741",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eed49adf",
+   "id": "1701a16b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:04.613108Z",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1579619e",
+   "id": "a0697e81",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9176b6df",
+   "id": "0cda4f41",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.166518Z",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f4a07f",
+   "id": "27ef37bd",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a0d9ec11",
+   "id": "f8e7e48b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.935156Z",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f5ab3a24",
+   "id": "9ea94857",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.321814Z",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0d234539",
+   "id": "eb61b555",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.607501Z",
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b0460bed-8f24-45c8-a71d-d628bb3345f7\n"
+      "Current session uuid:  b1f109f5-3def-4da0-872b-6f0f1a9be953\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7',\n",
+    "    'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7cb5b460",
+   "id": "26471d8f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81740fe2",
+   "id": "874135a1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:07.627425Z",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bbe622d9",
+   "id": "dc3a6127",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:09.404464Z",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53eee51",
+   "id": "4858c19a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a2891a",
+   "id": "e315d873",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -463,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b8c8ad47",
+   "execution_count": 11,
+   "id": "64a01e1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:10.851768Z",
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "52a1a77b",
+   "execution_count": 12,
+   "id": "f6a09853",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:11.810309Z",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9610df9",
+   "id": "c269cdab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:03:52.290520Z",
@@ -517,7 +517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -529,7 +529,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -537,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a0b89200774fd391831119ad607f9b",
+       "model_id": "8dff77a72834479cbd5e86f27aff813c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -567,7 +567,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 7102,   593, 18841,  5078, 14172,  8064, 13554, 13401, 17015,\n",
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
@@ -577,8 +577,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 18:45:23: Tuning MLPClassifier...\n",
-      "2024/01/04, 18:47:04: Tuning for MLPClassifier is finished [F1 score = 0.6590335121536831, Accuracy = 0.9028721376398815]\n",
+      "2024/01/05, 12:39:20: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:40:57: Tuning for MLPClassifier is finished [F1 score = 0.6533682935391297, Accuracy = 0.9021668614773057]\n",
       "\n"
      ]
     },
@@ -586,14 +586,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:47:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 12:40:57 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e14a4ac8cb4b2eb27f550d31e65dea",
+       "model_id": "f7be74d6bdce41a3b566c0066e4e4405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e89486d41a134d78b4d9f23e83030b9b",
+       "model_id": "6c389e45e5394b489338bcb7ec9070a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c9a8ce7",
+   "id": "6c21f030",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a9ee6134",
+   "id": "e73d8500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c511f069",
+   "id": "19e291b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd191313",
+   "id": "5fc149c8",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7109faa9",
+   "id": "f801e954",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf6ca4de",
+   "id": "32db6cb8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e940e0b",
+   "id": "ce7be028",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "85fcc585",
+   "id": "ceb8c517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b5c2276b",
+   "id": "cd41c261",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881ffd50",
+   "id": "e6cfd942",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1190,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b6180ab5",
+   "id": "2d9ea601",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18e28de0",
+   "id": "938b30cc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1224,7 +1224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:54:51 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:52:32 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1236,7 +1236,7 @@
       " 'experiment_iteration': 'Exp_iter_5',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 500,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -1244,7 +1244,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39deb5d17d9c41ffb56069d5d3c1962f",
+       "model_id": "e783791c8e594c5eb4463ba1498a3dc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1259,9 +1259,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:54:51 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:52:32 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 18:54:51 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:52:32 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1276,7 +1276,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([12269, 18551, 11422,  4842,  2061, 12046, 16727, 11861, 14580,\n",
       "            19701, 12917,  7538, 17610, 19120,  5581, 18072, 13209, 20500,\n",
@@ -1286,14 +1286,14 @@
       "            19701, 12917,  7538, 17610, 19120,  5581, 18072, 13209, 20500,\n",
       "            14741, 11309],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240104__234704.csv\n",
-      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 500, 'shuffle': True, 'solver': 'lbfgs', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240105__174057.csv\n",
+      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 500, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6324832048944e8fbf144055c5a73a3f",
+       "model_id": "af6a1aa955634bfcae9cfa28855d1da7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1314,7 +1314,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3e4f53d731a4a96b6d230cdfa13eb56",
+       "model_id": "d1bfa643ae9b45669d41ac9ed78741ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5594319",
+   "id": "2f4f2c19",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9c0f6ad4",
+   "id": "a39b9537",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7feb8f3a",
+   "id": "4d241719",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e95093",
+   "id": "c5c0ec3e",
    "metadata": {},
    "outputs": [],
    "source": []
