--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3a03f3a8",
+   "id": "e2d43212",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "61b7dd9f",
+   "id": "b5bfaba8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a657a9a",
+   "id": "c9101454",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2d327af",
+   "id": "e5c5a8b3",
    "metadata": {
     "is_executing": true
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e8bc61cb",
+   "id": "0300dde3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.593291Z",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cce916ce",
+   "id": "55ee12f9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.860770Z",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7e851a",
+   "id": "ddabf8f5",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d7dca92",
+   "id": "7eabd5cf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:04.613108Z",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d4b15ef",
+   "id": "9e212d61",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64515951",
+   "id": "35c22c34",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.166518Z",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a033a4ff",
+   "id": "ce99d139",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75bb83f0",
+   "id": "c742d67e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.935156Z",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b59c5bd1",
+   "id": "ca2d50ff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.321814Z",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "566c0027",
+   "id": "ed53f034",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.607501Z",
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b0460bed-8f24-45c8-a71d-d628bb3345f7\n"
+      "Current session uuid:  b1f109f5-3def-4da0-872b-6f0f1a9be953\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7',\n",
+    "    'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1483ecce",
+   "id": "1d9a46ad",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6a585b42",
+   "id": "b2189f90",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:07.627425Z",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6736b998",
+   "id": "b9ef6455",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:09.404464Z",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e74bc32b",
+   "id": "f6d77940",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57dde118",
+   "id": "085f8367",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -463,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "82820e37",
+   "execution_count": 11,
+   "id": "3b434d17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:10.851768Z",
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0221cf63",
+   "execution_count": 12,
+   "id": "8717d60a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:11.810309Z",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234d454c",
+   "id": "ac76a95e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:03:52.290520Z",
@@ -517,7 +517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -529,7 +529,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -537,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a0b89200774fd391831119ad607f9b",
+       "model_id": "8dff77a72834479cbd5e86f27aff813c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -567,7 +567,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 7102,   593, 18841,  5078, 14172,  8064, 13554, 13401, 17015,\n",
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
@@ -577,8 +577,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 18:45:23: Tuning MLPClassifier...\n",
-      "2024/01/04, 18:47:04: Tuning for MLPClassifier is finished [F1 score = 0.6590335121536831, Accuracy = 0.9028721376398815]\n",
+      "2024/01/05, 12:39:20: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:40:57: Tuning for MLPClassifier is finished [F1 score = 0.6533682935391297, Accuracy = 0.9021668614773057]\n",
       "\n"
      ]
     },
@@ -586,14 +586,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:47:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 12:40:57 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e14a4ac8cb4b2eb27f550d31e65dea",
+       "model_id": "f7be74d6bdce41a3b566c0066e4e4405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e89486d41a134d78b4d9f23e83030b9b",
+       "model_id": "6c389e45e5394b489338bcb7ec9070a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba89255",
+   "id": "5bb7418d",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ef9e6f06",
+   "id": "7709dfad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +663,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -676,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "78f1e82c",
+   "id": "29507cef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1062,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85d8cc9c",
+   "id": "77ce7184",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1071,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c68ff1dc",
+   "id": "beea5e2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,6 +1080,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1092,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2ae1c7ec",
+   "id": "b1fef7cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1120,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99a5da49",
+   "id": "ee11e8f3",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1129,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7d1a0850",
+   "id": "8f3f15b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,6 +1139,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1150,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b31c419",
+   "id": "042e5e59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1178,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f5a011",
+   "id": "a893d47c",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1187,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "100f64f3",
+   "id": "abb559ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,6 +1198,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1208,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb78f582",
+   "id": "1e7ad667",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1236,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d47d4a8d",
+   "id": "d407427e",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1245,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "dd52851c",
+   "id": "58aa6118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,6 +1257,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1266,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2be3f51",
+   "id": "f51d575b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1295,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044c5ea6",
+   "id": "3d00b03c",
    "metadata": {},
    "outputs": [],
    "source": []
