--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "429750df",
+   "id": "99204cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b738e71b",
+   "id": "88e67f61",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f70b7c55",
+   "id": "a61a45b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c1afbed",
+   "id": "9f19c73e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "762e719f",
+   "id": "c31e9f97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "54a34086",
+   "id": "b95cdf9e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f854edd7",
+   "id": "86044119",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b309f523",
+   "id": "f41d5cfc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c83201f",
+   "id": "50a4d631",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3d6b84e4",
+   "id": "fef8f24d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44d5e40",
+   "id": "3d82e19b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cb275312",
+   "id": "43cb0a05",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0bdc9016",
+   "id": "dcd59374",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "958fe0a0",
+   "id": "3fb80716",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c4520501",
+   "id": "4b3ca1ef",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a3154912",
+   "id": "e1d2989a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f130e1bb",
+   "id": "b332ec44",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "679324ad",
+   "id": "25aef32a",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e8a906",
+   "id": "e5f630c5",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8ddebe71",
+   "id": "e7796373",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8763ff84",
+   "id": "2e597431",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffa47efe",
+   "id": "cbd3eace",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -508,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 11:56:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -520,7 +520,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -528,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30481ca8c52f4103af4d813a8f289c9c",
+       "model_id": "e48b5498da9644babcba1bd3baa73317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,17 +540,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:22 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 11:56:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -558,6 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -565,7 +559,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -575,8 +569,53 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 19:05:22: Tuning MLPClassifier...\n"
+      "2024/01/05, 11:56:12: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:03:32: Tuning for MLPClassifier is finished [F1 score = 0.7829211856874619, Accuracy = 0.8038222222222222]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-05 12:03:32 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b95552a0be14c2cb2d1b821826c47bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a postprocessing mode\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a9c75c6211443af95f6433c3988bed5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -599,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "931ab733",
+   "id": "d379de80",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -608,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5db54df8",
+   "id": "98bf15ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +655,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -630,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eeabcaad",
+   "id": "7d86185c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -986,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6c71d07",
+   "id": "79d1ff0a",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -995,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fc42a644",
+   "id": "6ef35e8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1042,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1017,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25a7761c",
+   "id": "38c5b13e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1029,7 +1068,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:17:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:11:08 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1041,7 +1080,7 @@
       " 'experiment_iteration': 'Exp_iter_3',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 300,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -1049,7 +1088,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48e4875fa87a445a985acd2d5d799553",
+       "model_id": "9fadad467e2e45d6bcdaad802b2aa6f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1061,19 +1100,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:17:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:11:09 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 19:17:38 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:11:09 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1081,6 +1113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -1088,7 +1121,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=728)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 4329,   723,  8157,  8934,  5880,  1877,  9980,  9115, 13634,\n",
       "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
@@ -1098,14 +1131,14 @@
       "            12168,  6957,  9083, 14260,  5349,  7879,  3078, 10032, 13643,\n",
       "            12025,  7489],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__001246.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__170332.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 300, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aed44aaab8814f89aaca2d60f0061b9e",
+       "model_id": "7a1711c8e0724aa09a8b9bda23e4350b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1126,7 +1159,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "623a65a49c624f9fb5c4a5cff18fc1a3",
+       "model_id": "bff789d8edc74c5896d8508ce7cc9aed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1158,7 +1191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e6fc28a",
+   "id": "d6041088",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1167,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "211dcfd4",
+   "id": "d37bf8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1208,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1189,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "401bd18e",
+   "id": "96d57242",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1217,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "074e1540",
+   "id": "4ee62733",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1226,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a85b3f27",
+   "id": "55fde851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1267,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1248,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "173ef82b",
+   "id": "f1a81c10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1276,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5bd771",
+   "id": "b724ea6f",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1285,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dce5d225",
+   "id": "550c472e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1326,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1307,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4b5b01e0",
+   "id": "b095f444",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1664,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcd84f0",
+   "id": "bc830877",
    "metadata": {},
    "outputs": [],
    "source": []
