--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bb676896",
+   "id": "72a3a285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d8280a83",
+   "id": "11de3f8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c5d76bfb",
+   "id": "885d6a6b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a13cae73",
+   "id": "fe590425",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df9860fe",
+   "id": "1c3ccce2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eead8031",
+   "id": "57a21e5f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0d366f2",
+   "id": "c3693103",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8d430300",
+   "id": "7ffae0bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3056a4",
+   "id": "923e878a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d210cf26",
+   "id": "e56c36b5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e1f3b4",
+   "id": "c7fca49e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b94ff66",
+   "id": "b534db42",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf5f7cf7",
+   "id": "3abb564e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cb9bd07b",
+   "id": "b83cd641",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3b07970e",
+   "id": "28b95610",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a8fd47ef",
+   "id": "81f553fd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "43bada29",
+   "id": "45970629",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b308cb",
+   "id": "1ceee9b5",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ce4cd25",
+   "id": "06f1fbeb",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "67b3e759",
+   "id": "655bba3f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "01511f76",
+   "id": "afafb789",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4826e872",
+   "id": "06acf2eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -508,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 11:56:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -520,7 +520,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -528,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30481ca8c52f4103af4d813a8f289c9c",
+       "model_id": "e48b5498da9644babcba1bd3baa73317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,17 +540,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:22 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 11:56:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -558,6 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -565,7 +559,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -575,8 +569,53 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 19:05:22: Tuning MLPClassifier...\n"
+      "2024/01/05, 11:56:12: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:03:32: Tuning for MLPClassifier is finished [F1 score = 0.7829211856874619, Accuracy = 0.8038222222222222]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-05 12:03:32 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b95552a0be14c2cb2d1b821826c47bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a postprocessing mode\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a9c75c6211443af95f6433c3988bed5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -599,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07ddc1f",
+   "id": "30ecf0b0",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -608,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f95181db",
+   "id": "5d2dbc77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +655,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -630,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "16191a2a",
+   "id": "7440fa22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -986,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb8619d",
+   "id": "d4c778a9",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -995,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "70156ef4",
+   "id": "c4922b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1042,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1017,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09cb95fc",
+   "id": "07cfee3f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1373,7 +1412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a637ad5",
+   "id": "cf4f1f53",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1382,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b6af51c4",
+   "id": "c33bca42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1429,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1404,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f726be",
+   "id": "7ba7b21c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1416,7 +1455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:17:57 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:11:38 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1428,7 +1467,7 @@
       " 'experiment_iteration': 'Exp_iter_4',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 400,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -1436,7 +1475,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f99fb97ea6c24773a8f2886922e59318",
+       "model_id": "1566b37c3176487c95a39aaf4f5e42ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1448,19 +1487,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:17:57 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:11:39 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 19:17:57 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:11:39 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1468,6 +1500,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -1475,7 +1508,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=719)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 6425, 11811, 14319,  3284,  9129,  5763,  7549,  1393, 13879,\n",
       "            14802,  8634, 10336,  1486, 14287,  8890,  5961, 10137, 14550,\n",
@@ -1485,14 +1518,14 @@
       "            14802,  8634, 10336,  1486, 14287,  8890,  5961, 10137, 14550,\n",
       "            14981, 11017],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__001246.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__170332.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 400, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbcae1474ed34b99a29a58e7b81ee78b",
+       "model_id": "471c6f7c9c5e4a8fbdfacba36e3c8799",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1513,7 +1546,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4891bc7a4257431bb8675800c8a1f8cb",
+       "model_id": "608716048c3243e28612e95b02e5c07f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1545,7 +1578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd77fc53",
+   "id": "9f75fceb",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1554,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9b17e824",
+   "id": "8306c2ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1595,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1576,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f271dc05",
+   "id": "67c77321",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1604,7 +1637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d13d20",
+   "id": "613acf12",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1613,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acca51cb",
+   "id": "cb2aaca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1654,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1635,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f2438b9d",
+   "id": "36aab79b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1992,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33f274ce",
+   "id": "cd1cb81a",
    "metadata": {},
    "outputs": [],
    "source": []
