--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy4.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4-Copy4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e5e1e394",
+   "id": "37ae5129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8ed18bec",
+   "id": "8ba9d073",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ac235d8d",
+   "id": "b9d6957e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "157f7af2",
+   "id": "6d423da3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3d6eb676",
+   "id": "e6e18107",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "de99f02c",
+   "id": "129c0e50",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98db864f",
+   "id": "662f78be",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "54d3d021",
+   "id": "dbb709d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c627d0",
+   "id": "c046ac14",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6d62d431",
+   "id": "15814677",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3446b4bc",
+   "id": "464f252e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ddce6ddf",
+   "id": "da9d052f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7e6ec68e",
+   "id": "37d72add",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "51e7a1d9",
+   "id": "e2b217f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc846ea2",
+   "id": "9417f104",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e65654c4",
+   "id": "0357d7bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ab9e1b65",
+   "id": "89607091",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ef9cc7",
+   "id": "f2e6fd62",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0228fe",
+   "id": "45ef3d44",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e613be9",
+   "id": "62ed5dab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1156b2e1",
+   "id": "bfc17750",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f95d257",
+   "id": "f2305567",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -508,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 11:56:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -520,7 +520,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -528,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30481ca8c52f4103af4d813a8f289c9c",
+       "model_id": "e48b5498da9644babcba1bd3baa73317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,17 +540,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:22 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 11:56:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -558,6 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -565,7 +559,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -575,8 +569,53 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 19:05:22: Tuning MLPClassifier...\n"
+      "2024/01/05, 11:56:12: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:03:32: Tuning for MLPClassifier is finished [F1 score = 0.7829211856874619, Accuracy = 0.8038222222222222]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-05 12:03:32 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4b95552a0be14c2cb2d1b821826c47bf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze multiple models:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enabled a postprocessing mode\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a9c75c6211443af95f6433c3988bed5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -599,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c1ea306",
+   "id": "920510b6",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -608,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "472e6364",
+   "id": "f2291c95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +655,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -630,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4ae9250f",
+   "id": "4edcfba6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -986,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df7dcfe3",
+   "id": "2a0243fd",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -995,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5079f2bc",
+   "id": "78e82d11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1042,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1017,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36f28997",
+   "id": "28d8f2c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1373,7 +1412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e32dac4",
+   "id": "34ee745e",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1382,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7d151d56",
+   "id": "f22170a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1390,7 +1429,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1404,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e5878f8",
+   "id": "6ba8c7b7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1432,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6dfcb6c",
+   "id": "1b5cd135",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1441,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9623cdd7",
+   "id": "5cba0452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1449,7 +1488,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1463,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "251763ba",
+   "id": "5c7ac24d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1475,7 +1514,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:18:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:12:06 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1487,7 +1526,7 @@
       " 'experiment_iteration': 'Exp_iter_5',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 500,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -1495,7 +1534,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e85803d45eb44668a39ab39b3c8bbd7",
+       "model_id": "8e34ee14cf974d5d978f5de352ac8ba6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1507,19 +1546,12 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:18:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:12:06 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 19:18:21 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:12:06 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1527,6 +1559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -1534,7 +1567,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=730)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 8104,   580,  8954,  6500,  5436,  3490,  1621, 11610,  7067,\n",
       "            10637,   767, 10997,  6202,  4468,  8440, 10810, 11409,  3682,\n",
@@ -1544,14 +1577,14 @@
       "            10637,   767, 10997,  6202,  4468,  8440, 10810, 11409,  3682,\n",
       "            12856, 14104],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__001246.csv\n",
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_income/tuning_results_Folktables_GA_2018_Income_20240105__170332.csv\n",
       "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 500, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11f844cdd8374f4a9a1fa856da9f8e23",
+       "model_id": "073fb68262b24515ac9d95338a802f9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1572,7 +1605,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1f2ba4d834b413aaf16e57d9de52786",
+       "model_id": "53d8197010744b55a48a990872dbc0bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1604,7 +1637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43f90d76",
+   "id": "7d21a594",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1613,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "46e9359a",
+   "id": "e752ac44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1621,7 +1654,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_GA_2018_Income_20240105__001246.csv'\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1635,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "45862ce6",
+   "id": "4ba068d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1992,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "325f180e",
+   "id": "a5994c76",
    "metadata": {},
    "outputs": [],
    "source": []
