--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_income/ACS_Income_Batch4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1324bcfb",
+   "id": "fbad6dfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d1a399e1",
+   "id": "4f6f0525",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30f4bb75",
+   "id": "18a3f02b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b37f9c9",
+   "id": "75b39d2f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.421538Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f5f96af",
+   "id": "14a597b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.434085Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5867c98d",
+   "id": "21118280",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:06.442873Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b0b1f3",
+   "id": "5a0fcedb",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44ba3856",
+   "id": "bccc3505",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:26.384376Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69ea56a",
+   "id": "c1f7c68d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ae452bb2",
+   "id": "d00045b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:27.955337Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "254b9f12",
+   "id": "9306beac",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "613eab94",
+   "id": "f2de9a2e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:29.314687Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2135d92c",
+   "id": "068afa8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:30.488092Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0398aa35",
+   "id": "c9f0142b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:41.124722Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  cf4275e8-0fe0-4fff-aea0-318f8caec796\n"
+      "Current session uuid:  426f4b41-5b22-4118-b5c8-15a0ab4aa18f\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796',\n",
+    "    'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a79d4a8a",
+   "id": "d91f038a",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fc3a29ed",
+   "id": "fcfe136d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:44.213695Z",
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c019fb4d",
+   "id": "a2f10ac4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:46.796185Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c4fd37a",
+   "id": "dbce46f6",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71eab14d",
+   "id": "27858583",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "408f8037",
+   "id": "b2380719",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:50.023445Z",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "826456b9",
+   "id": "e114f729",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:40:51.808311Z",
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b15e35",
+   "id": "eac7d85e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T21:45:53.001285Z",
@@ -508,7 +508,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 11:56:11 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -520,7 +520,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cf4275e8-0fe0-4fff-aea0-318f8caec796'}\n",
+      " 'session_uuid': '426f4b41-5b22-4118-b5c8-15a0ab4aa18f'}\n",
       "\n",
       "\n"
      ]
@@ -528,7 +528,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30481ca8c52f4103af4d813a8f289c9c",
+       "model_id": "e48b5498da9644babcba1bd3baa73317",
        "version_major": 2,
        "version_minor": 0
       },
@@ -540,17 +540,10 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "intervention_option:  True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:05:22 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 11:56:12 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -558,6 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "intervention_option:  True\n",
       "Using ROC postprocessor\n",
       "cur_base_flow_dataset.X_train_val.columns:  Index(['cat__SCHL_1', 'cat__SCHL_10', 'cat__SCHL_11', 'cat__SCHL_12',\n",
       "       'cat__SCHL_13', 'cat__SCHL_14', 'cat__SCHL_15', 'cat__SCHL_16',\n",
@@ -565,7 +559,7 @@
       "       ...\n",
       "       'cat__RELP_3', 'cat__RELP_4', 'cat__RELP_5', 'cat__RELP_6',\n",
       "       'cat__RELP_7', 'cat__RELP_8', 'cat__RELP_9', 'num__AGEP', 'num__WKHP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object', length=724)\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -575,8 +569,8 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 19:05:22: Tuning MLPClassifier...\n",
-      "2024/01/04, 19:12:46: Tuning for MLPClassifier is finished [F1 score = 0.7832959187801546, Accuracy = 0.8036444444444445]\n",
+      "2024/01/05, 11:56:12: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:03:32: Tuning for MLPClassifier is finished [F1 score = 0.7829211856874619, Accuracy = 0.8038222222222222]\n",
       "\n"
      ]
     },
@@ -584,14 +578,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 19:12:46 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 12:03:32 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aa681807c6f4f2683ff128e856e33e4",
+       "model_id": "4b95552a0be14c2cb2d1b821826c47bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -612,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e2f9ba6ea4e4aa2a3b40632b9db47c0",
+       "model_id": "7a9c75c6211443af95f6433c3988bed5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -644,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121ceb0a",
+   "id": "93542070",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -653,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7280b754",
+   "id": "c870eb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,6 +655,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -674,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "48846643",
+   "id": "01ab107b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1030,7 +1025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ac231c",
+   "id": "820cd68d",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1039,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "02bca919",
+   "id": "6bc5c7c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,6 +1042,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1060,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7ab920c",
+   "id": "28a77016",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1416,7 +1412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98b7ddd6",
+   "id": "e6d96089",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1425,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c451de96",
+   "id": "497c6454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,6 +1429,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1446,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "13d127ab",
+   "id": "d8d0c997",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1474,7 +1471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd9227c0",
+   "id": "1be04674",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1483,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "eac7424a",
+   "id": "a6e9b19f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1491,6 +1488,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1504,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f7809dd0",
+   "id": "9d985d7a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1532,7 +1530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f35e92e",
+   "id": "61391e11",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1541,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8efec7c0",
+   "id": "ada08f1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1549,6 +1547,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_GA_2018_Income_20240105__170332.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1562,7 +1561,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2da55e33",
+   "id": "a4692969",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1919,7 +1918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1dc4927",
+   "id": "2fbcb737",
    "metadata": {},
    "outputs": [],
    "source": []
