--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch2.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/ACS_PubCov_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0b13eb0d",
+   "id": "b212dd74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8b7b0d88",
+   "id": "5e876ea6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:19.738404Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "34af8b33",
+   "id": "af18317b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:35:37.942410Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b063944c",
+   "id": "a35716d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.626797Z",
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fc410153",
+   "id": "fae178cf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.632181Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4c5f0f0e",
+   "id": "63b2740c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:32.642020Z",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0baf6894",
+   "id": "6fd80a15",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ff3f885d",
+   "id": "563ef5a2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.335196Z",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7d6b44",
+   "id": "db7a7ace",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d1a8f2ff",
+   "id": "6fedc8e7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:35.358215Z",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64a8b4a6",
+   "id": "5719a260",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "894fa707",
+   "id": "2852a1d8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.349633Z",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aeb01889",
+   "id": "4574b28c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:36.680012Z",
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "305e5ebe",
+   "id": "44bead7e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:46.039502Z",
@@ -254,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  3e06a293-3f85-4f52-ac73-9257a3971a85\n"
+      "Current session uuid:  aa7a7273-bf7c-44f9-becc-3b0384b722c5\n"
      ]
     }
    ],
@@ -263,14 +263,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '3e06a293-3f85-4f52-ac73-9257a3971a85',\n",
+    "    'session_uuid': 'aa7a7273-bf7c-44f9-becc-3b0384b722c5',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "305c75aa",
+   "id": "30d4b2c0",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8a34b96b",
+   "id": "7e952da1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:53.416248Z",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "79b38328",
+   "id": "1cdcb1a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:54.127684Z",
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8655fa7",
+   "id": "32b84fd2",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc6051ca",
+   "id": "571378f7",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "24a24f0b",
+   "id": "060c3389",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.711376Z",
@@ -525,18 +525,18 @@
    },
    "outputs": [],
    "source": [
-    "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240104__230251.csv'\n",
-    "]\n",
-    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
-    "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
-    "                         for tuned_params_filename in tuned_params_filenames]"
+    "# tuned_params_filenames = [\n",
+    "#     'tuning_results_Folktables_CA_2018_Public_Coverage_20240104__230251.csv'\n",
+    "# ]\n",
+    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
+    "#                                       FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
+    "#                          for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fead8369",
+   "id": "65afec4c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:26:55.914187Z",
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7096a01",
+   "id": "c93a4d9d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T23:29:59.790418Z",
@@ -569,7 +569,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:22:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:20:13 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -581,7 +581,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '3e06a293-3f85-4f52-ac73-9257a3971a85'}\n",
+      " 'session_uuid': 'aa7a7273-bf7c-44f9-becc-3b0384b722c5'}\n",
       "\n",
       "\n"
      ]
@@ -589,7 +589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "008b8545226f40c2abf92ea60161a738",
+       "model_id": "97bc96233798431fa3fd3d7130f1f802",
        "version_major": 2,
        "version_minor": 0
       },
@@ -604,10 +604,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:22:09 experiment_interface.py INFO    : The dataset is preprocessed\n",
-      "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 18:22:09 experiment_interface.py INFO    : Models config is loaded from the input file\n",
-      "INFO:root:Models config is loaded from the input file\n"
+      "2024-01-05 12:20:14 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n"
      ]
     },
     {
@@ -633,7 +631,7 @@
       "       'cat__DEYE_2', 'cat__DREM_1', 'cat__DREM_2', 'cat__ESR_0', 'cat__ESR_1',\n",
       "       'cat__ESR_2', 'cat__ESR_3', 'cat__ESR_4', 'cat__ESR_6', 'cat__ST_6',\n",
       "       'cat__FER_0', 'cat__FER_1', 'cat__FER_2', 'num__AGEP', 'num__PINCP',\n",
-      "       'RACE'],\n",
+      "       'SEX&RAC1P_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([10155, 11689, 12599, 12193,  8678,  8217,  4670, 12087,  5235,\n",
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
@@ -643,14 +641,23 @@
       "             4189,  7278, 10642,  5284,  7002, 14642, 10594,  7701,  8686,\n",
       "             8665,  6253],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_acs_pubcov/tuning_results_Folktables_CA_2018_Public_Coverage_20240104__230251.csv\n",
-      "MLPClassifier:  {'activation': 'tanh', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'adaptive', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 100, 'shuffle': True, 'solver': 'sgd', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+      "2024/01/05, 12:20:14: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:22:48: Tuning for MLPClassifier is finished [F1 score = 0.6600966027992362, Accuracy = 0.7086222222222222]\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-01-05 12:22:48 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79d405d03564449a9da2fba445d1ebae",
+       "model_id": "ccfc7de242794c62957ef0decee7dc4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -671,7 +678,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05f2fc47e69e4fda8795efed3fe7f695",
+       "model_id": "5cc1938364cf45b0a2b1071b2982f2d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -692,9 +699,9 @@
     "                          models_params_for_tuning=models_params_for_tuning,\n",
     "                          metrics_computation_config=metrics_computation_config,\n",
     "                          custom_table_fields_dct=custom_table_fields_dct,\n",
-    "#                           with_tuning=True,\n",
-    "                          with_tuning=False,\n",
-    "                          tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                          with_tuning=True,\n",
+    "#                           with_tuning=False,\n",
+    "#                           tuned_params_df_paths=tuned_params_df_paths,\n",
     "                          save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                          dataset_name=DATASET_NAME,\n",
     "                          postprocessor_name='ROC',\n",
@@ -703,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee82444",
+   "id": "9df7e1e8",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -712,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f7be2b94",
+   "id": "bb0194c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,6 +727,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__172248.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -733,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4cdb7081",
+   "id": "980d622f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1131,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a98d40d",
+   "id": "e5079eb4",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1140,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5d724521",
+   "id": "9bb8421b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,6 +1156,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__172248.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1161,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df745aae",
+   "id": "44b8fff5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1189,7 +1198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ba5b50",
+   "id": "973b582c",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1198,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "46d72435",
+   "id": "764b3314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,6 +1215,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__172248.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1219,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2e89fced",
+   "id": "4a7f8a7e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1247,7 +1257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c675614e",
+   "id": "ce8d6567",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1256,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "0c4273cb",
+   "id": "99d20827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,6 +1274,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__172248.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1277,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ac2798a",
+   "id": "dd88e44b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1305,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c400d6a9",
+   "id": "aab241e6",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1314,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0d5ee94b",
+   "id": "79990d66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,6 +1333,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_CA_2018_Public_Coverage_20240105__172248.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1335,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "56941ca8",
+   "id": "438a3ac3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1364,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc21fc53",
+   "id": "ffc581dd",
    "metadata": {},
    "outputs": [],
    "source": []
