--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy1.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "718a23ab",
+   "id": "5835ad07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "653c06bc",
+   "id": "2d434d9d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4c1c8b26",
+   "id": "ade28dcf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c44e459c",
+   "id": "51f95260",
    "metadata": {
     "is_executing": true
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "03eda54d",
+   "id": "aa1c1397",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.593291Z",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "028c4d5d",
+   "id": "2197497b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.860770Z",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda695f8",
+   "id": "7211060c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "28cb164c",
+   "id": "9fc66258",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:04.613108Z",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a0cd62",
+   "id": "858df633",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cf0de0e7",
+   "id": "1d8d9156",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.166518Z",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55daaccd",
+   "id": "837e856e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a27ad08",
+   "id": "b6efc6c6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.935156Z",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b7ad2dd",
+   "id": "ffe63ba7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.321814Z",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "73c6f6e1",
+   "id": "e811f379",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.607501Z",
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b0460bed-8f24-45c8-a71d-d628bb3345f7\n"
+      "Current session uuid:  b1f109f5-3def-4da0-872b-6f0f1a9be953\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7',\n",
+    "    'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d23bfb49",
+   "id": "ca16cff5",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "33ffd32a",
+   "id": "69a7cd96",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:07.627425Z",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2bc8bb14",
+   "id": "791cbfc0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:09.404464Z",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfb39355",
+   "id": "b0f62f6e",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b04f3d",
+   "id": "3d467c4c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -463,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "8d9da4b7",
+   "execution_count": 11,
+   "id": "e265f377",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:10.851768Z",
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fb2317d8",
+   "execution_count": 12,
+   "id": "44701d0a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:11.810309Z",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76e10b01",
+   "id": "cd8a49cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:03:52.290520Z",
@@ -517,7 +517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -529,7 +529,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -537,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a0b89200774fd391831119ad607f9b",
+       "model_id": "8dff77a72834479cbd5e86f27aff813c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -567,7 +567,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 7102,   593, 18841,  5078, 14172,  8064, 13554, 13401, 17015,\n",
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
@@ -577,8 +577,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 18:45:23: Tuning MLPClassifier...\n",
-      "2024/01/04, 18:47:04: Tuning for MLPClassifier is finished [F1 score = 0.6590335121536831, Accuracy = 0.9028721376398815]\n",
+      "2024/01/05, 12:39:20: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:40:57: Tuning for MLPClassifier is finished [F1 score = 0.6533682935391297, Accuracy = 0.9021668614773057]\n",
       "\n"
      ]
     },
@@ -586,14 +586,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:47:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 12:40:57 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e14a4ac8cb4b2eb27f550d31e65dea",
+       "model_id": "f7be74d6bdce41a3b566c0066e4e4405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e89486d41a134d78b4d9f23e83030b9b",
+       "model_id": "6c389e45e5394b489338bcb7ec9070a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3b43779",
+   "id": "5ccee570",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "93e53390",
+   "id": "7befa59c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -676,8 +676,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eab3f74d",
+   "execution_count": 12,
+   "id": "ae0c5c97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -689,7 +689,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:53:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:51:16 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -701,7 +701,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -709,7 +709,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a920d9357b9f493983975e6f97537967",
+       "model_id": "7ee9ad5ac8f9436295e9bd393fcac613",
        "version_major": 2,
        "version_minor": 0
       },
@@ -724,9 +724,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:53:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:51:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 18:53:20 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:51:16 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -741,7 +741,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([11154,  2918,  4165, 16989, 11116, 18464,  5262,  2614, 11058,\n",
       "            14769, 11087, 10125, 19318, 10215, 10253,  7587,  2716,   577,\n",
@@ -751,14 +751,14 @@
       "            14769, 11087, 10125, 19318, 10215, 10253,  7587,  2716,   577,\n",
       "             2257,  1011],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240104__234704.csv\n",
-      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 200, 'shuffle': True, 'solver': 'lbfgs', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240105__174057.csv\n",
+      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 200, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b13550b748f4bcc95c5a71de17f65d0",
+       "model_id": "2f77e12ee9e44e259f86ad5cc442fcf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -779,7 +779,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ceb5868aa1e4cba99120591dd0271f1",
+       "model_id": "9a85d9997fbc4e82864b950e47d15d75",
        "version_major": 2,
        "version_minor": 0
       },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3810425e",
+   "id": "9a83879b",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "c6957eb5",
+   "id": "04549d4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +828,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -842,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da2bc7b0",
+   "id": "33f9613b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc3141ff",
+   "id": "bfac7129",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bac69ec7",
+   "id": "82317a0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cd378682",
+   "id": "5ae8cb09",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42d7dc2",
+   "id": "0d8f3093",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "9f117b9a",
+   "id": "f9220dcc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +946,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7c2bcc3e",
+   "id": "60f0cb73",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140980ab",
+   "id": "3d9677c0",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -997,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6c56d0c7",
+   "id": "42b97fea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1005,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "528729ab",
+   "id": "e308ada4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1048,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a6c4af",
+   "id": "fd75f5a9",
    "metadata": {},
    "outputs": [],
    "source": []
