--- a/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy3.ipynb
+++ b/notebooks/diff_fairness_interventions_exp/ROC/ROC_law_school/Law_School_Batch2-Copy3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f1aed23d",
+   "id": "9a20eb0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5008cfdc",
+   "id": "93fadb78",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:06:47.913158Z",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f5ddf25",
+   "id": "bdda0a4c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:07:04.695699Z",
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a03e93fa",
+   "id": "0aae6242",
    "metadata": {
     "is_executing": true
    },
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1cf1cf60",
+   "id": "42acf1eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.593291Z",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7b0653c1",
+   "id": "5ef1c7de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:03.860770Z",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b33b57d",
+   "id": "e960df29",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "002cd26b",
+   "id": "e3374dcd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:04.613108Z",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed2bafc",
+   "id": "25250c8e",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5562084f",
+   "id": "b8a3f9d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.166518Z",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c78f61b",
+   "id": "ce44aa36",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "efa82d02",
+   "id": "8f319bff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:05.935156Z",
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dddf940d",
+   "id": "6fd7a3b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.321814Z",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b00a4c89",
+   "id": "38cc853e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:06.607501Z",
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  b0460bed-8f24-45c8-a71d-d628bb3345f7\n"
+      "Current session uuid:  b1f109f5-3def-4da0-872b-6f0f1a9be953\n"
      ]
     }
    ],
@@ -260,14 +260,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7',\n",
+    "    'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c9517b02",
+   "id": "ffb1cfaa",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8532821d",
+   "id": "d33a4652",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:07.627425Z",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d7614d21",
+   "id": "21a17584",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:09.404464Z",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b1fc02",
+   "id": "716fc53f",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fdd537",
+   "id": "88d2c32c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -463,8 +463,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a471a750",
+   "execution_count": 11,
+   "id": "3e59a0ec",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:10.851768Z",
@@ -483,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a1b281cf",
+   "execution_count": 12,
+   "id": "3c6e9bc4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:00:11.810309Z",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7036ad5f",
+   "id": "84c2743b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-04T22:03:52.290520Z",
@@ -517,7 +517,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -529,7 +529,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -537,7 +537,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3a0b89200774fd391831119ad607f9b",
+       "model_id": "8dff77a72834479cbd5e86f27aff813c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,7 +552,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:45:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:39:20 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -567,7 +567,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 7102,   593, 18841,  5078, 14172,  8064, 13554, 13401, 17015,\n",
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
@@ -577,8 +577,8 @@
       "            18446,  6938,  3450,  9375, 19994, 16100,  4401,   142, 15143,\n",
       "             2188,  4332],\n",
       "           dtype='int64')\n",
-      "2024/01/04, 18:45:23: Tuning MLPClassifier...\n",
-      "2024/01/04, 18:47:04: Tuning for MLPClassifier is finished [F1 score = 0.6590335121536831, Accuracy = 0.9028721376398815]\n",
+      "2024/01/05, 12:39:20: Tuning MLPClassifier...\n",
+      "2024/01/05, 12:40:57: Tuning for MLPClassifier is finished [F1 score = 0.6533682935391297, Accuracy = 0.9021668614773057]\n",
       "\n"
      ]
     },
@@ -586,14 +586,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:47:04 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2024-01-05 12:40:57 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e14a4ac8cb4b2eb27f550d31e65dea",
+       "model_id": "f7be74d6bdce41a3b566c0066e4e4405",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e89486d41a134d78b4d9f23e83030b9b",
+       "model_id": "6c389e45e5394b489338bcb7ec9070a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5502ddd0",
+   "id": "6286f3e4",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3532642a",
+   "id": "7828ea6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c7ceba5c",
+   "id": "9a57afc0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:14.888610Z",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f634ff4",
+   "id": "fc2883bc",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f7e15913",
+   "id": "7bb97742",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1bd35771",
+   "id": "15b3efba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:19.039982Z",
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28f5463e",
+   "id": "5248f587",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "91ceb847",
+   "id": "6ed60ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1152,8 +1152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "123f133d",
+   "execution_count": 12,
+   "id": "69f30866",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:24.538103Z",
@@ -1165,7 +1165,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:54:25 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2024-01-05 12:52:05 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -1177,7 +1177,7 @@
       " 'experiment_iteration': 'Exp_iter_4',\n",
       " 'fair_intervention_params_lst': '[True]',\n",
       " 'model_init_seed': 400,\n",
-      " 'session_uuid': 'b0460bed-8f24-45c8-a71d-d628bb3345f7'}\n",
+      " 'session_uuid': 'b1f109f5-3def-4da0-872b-6f0f1a9be953'}\n",
       "\n",
       "\n"
      ]
@@ -1185,7 +1185,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7948d453c0b4e188dc6df1eb5cd0b82",
+       "model_id": "a892ac32693c43378f6f0478d5a54038",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1200,9 +1200,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-04 18:54:25 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2024-01-05 12:52:05 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n",
-      "2024-01-04 18:54:25 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2024-01-05 12:52:05 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -1217,7 +1217,7 @@
       "       'cat__fam_inc_5.0', 'cat__tier_1.0', 'cat__tier_2.0', 'cat__tier_3.0',\n",
       "       'cat__tier_4.0', 'cat__tier_5.0', 'cat__tier_6.0', 'num__decile1b',\n",
       "       'num__decile3', 'num__lsat', 'num__ugpa', 'num__zfygpa', 'num__zgpa',\n",
-      "       'race_binary'],\n",
+      "       'male&race_binary'],\n",
       "      dtype='object')\n",
       "Top indexes of an X_test in the current base flow dataset:  Int64Index([ 5178,  6668, 11759,   242, 15137, 15320, 16824, 15370, 10348,\n",
       "            18018,   684, 12169,   822,  4052,  5211,  8436,   126,  9549,\n",
@@ -1227,14 +1227,14 @@
       "            18018,   684, 12169,   822,  4052,  5211,  8436,   126,  9549,\n",
       "            13980,   403],\n",
       "           dtype='int64')\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240104__234704.csv\n",
-      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 400, 'shuffle': True, 'solver': 'lbfgs', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/diff_fairness_interventions_exp/ROC/ROC_law_school/tuning_results_Law_School_20240105__174057.csv\n",
+      "MLPClassifier:  {'activation': 'logistic', 'alpha': 0.0001, 'batch_size': 'auto', 'beta_1': 0.9, 'beta_2': 0.999, 'early_stopping': False, 'epsilon': 1e-08, 'hidden_layer_sizes': (100, 100), 'learning_rate': 'constant', 'learning_rate_init': 0.001, 'max_fun': 15000, 'max_iter': 1000, 'momentum': 0.9, 'n_iter_no_change': 10, 'nesterovs_momentum': True, 'power_t': 0.5, 'random_state': 400, 'shuffle': True, 'solver': 'adam', 'tol': 0.0001, 'validation_fraction': 0.1, 'verbose': False, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a8cd8039e1044e69017b6056b6d3764",
+       "model_id": "c2d6603fc048400eaae08ee2cae65a09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1255,7 +1255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "958f53417727441f83225d74da100478",
+       "model_id": "195acf5327414ea8a74b5e15138e8e35",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5047b9f",
+   "id": "16c189ac",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c079f7fd",
+   "id": "62cbf7d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1304,7 +1304,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1318,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e13ad539",
+   "id": "d3deaed7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:29.050787Z",
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1d7574",
+   "id": "4c29a592",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "69503f4d",
+   "id": "9dcc71e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Law_School_20240104__234704.csv'\n",
+    "    'tuning_results_Law_School_20240105__174057.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', 'diff_fairness_interventions_exp',\n",
     "                                      FAIRNESS_INTERVENTION_NAME, EXPERIMENT_NAME, tuned_params_filename)\n",
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d8ca4d21",
+   "id": "684f214d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-03T22:18:33.438196Z",
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cf8afb",
+   "id": "d5739c00",
    "metadata": {},
    "outputs": [],
    "source": []
